--- a/canopy/index.html
+++ b/canopy/index.html
@@ -15,7 +15,7 @@
   data-label="canopyLabel"
   data-style="canopyStyle"
   ></div>
-<script src="//drj11.github.io/sheffield-maps/sheffmap.js"></script>
+<script src="https://drj11.github.io/sheffield-maps/sheffmap.js"></script>
 <script>
 
 canopyLabel = function(v, d, feature) {
