--- a/imd/index.html
+++ b/imd/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="sheffmap" style="height:600px"
   data-url="2015imd.json"
-  data-column="decile"
+  data-column="Decile"
   data-label="labelDecile"
   data-style="styleDecile"
   ></div>
@@ -20,7 +20,7 @@
 
 labelDecile = function(v, d, feature) {
   v = +v
-  var label = d.name + " decile " + v
+  var label = d.Name + " decile " + v
   return label
 }
 styleDecile = function(v, d, feature) {
