Convert to HTML5 doctype

--- a/canopy/index.html
+++ b/canopy/index.html
@@ -1,4 +1,4 @@
-<xhtml>
+<!DOCTYPE html>
 <head>
 <!-- per http://leafletjs.com/examples/quick-start/ -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
@@ -33,4 +33,3 @@ mapinate()
 
 </script>
 </body>
-</html>
