--- a/fuelpoverty/index.html
+++ b/fuelpoverty/index.html
@@ -1,4 +1,4 @@
-<xhtml>
+<!DOCTYPE html>
 <head>
 <!-- per http://leafletjs.com/examples/quick-start/ -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
@@ -34,4 +34,3 @@ mapinate()
 
 </script>
 </body>
-</html>
