Update for new location of sheffmap.js

--- a/fuelpoverty/index.html
+++ b/fuelpoverty/index.html
@@ -15,7 +15,7 @@
   data-label="fuelPovertyLabel"
   data-style="fuelPovertyStyle"
   ></div>
-<script src="https://drj11.github.io/sheffield-maps/sheffmap.js"></script>
+<script src="https://drj11.github.io/sheffmap/sheffmap.js"></script>
 <script>
 
 fuelPovertyLabel = function(v, d, feature) {
