--- a/imd/index.html
+++ b/imd/index.html
@@ -15,7 +15,7 @@
   data-label="labelDecile"
   data-style="styleDecile"
   ></div>
-<script src="https://drj11.github.io/sheffield-maps/sheffmap.js"></script>
+<script src="https://drj11.github.io/sheffmap/sheffmap.js"></script>
 <script>
 
 labelDecile = function(v, d, feature) {
