--- a/representation/index.html
+++ b/representation/index.html
@@ -15,7 +15,7 @@
   data-label="labelTurnout"
   data-style="styleRepresentation"
   ></div>
-<script src="https://drj11.github.io/sheffield-maps/sheffmap.js"></script>
+<script src="https://drj11.github.io/sheffmap/sheffmap.js"></script>
 <script>
 
 labelTurnout = function(v, d, feature) {
