--- a/imd/index.html
+++ b/imd/index.html
@@ -8,8 +8,8 @@
    integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
    crossorigin=""></script>
 </head>
-<body>
-<div class="sheffmap" style="height:600px"
+<body style="margin: 0">
+<div class="sheffmap" style="height:100vh"
   data-url="2015imd.json"
   data-column="Decile"
   data-label="labelDecile"
