--- a/imd/index.html
+++ b/imd/index.html
@@ -10,7 +10,10 @@
    crossorigin=""></script>
 </head>
 <body style="margin: 0">
-<div class="sheffmap" style="height:100vh"
+<div style="position:absolute; z-index:9">
+  <h1 style="margin-left:40px">Index of Multiple Deprivation</h1>
+</div>
+<div class="sheffmap" style="height:100vh; z-index:0"
   data-url="2015imd.json"
   data-column="Decile"
   data-label="labelDecile"
