--- a/imd/index.html
+++ b/imd/index.html
@@ -18,8 +18,9 @@
   data-column="Decile"
   data-label="labelDecile"
   data-style="styleDecile"
+  data-wards="yes"
   ></div>
-<script src="https://drj11.github.io/sheffmap/sheffmap.js"></script>
+<script src="sheffmap.js"></script>
 <script>
 
 labelDecile = function(v, d, feature) {
