--- a/where/index.html
+++ b/where/index.html
@@ -43,6 +43,19 @@ lines =
     "geometry": {
       "type": "Point",
       "coordinates": [
+        "-1.4677872",
+        "53.37748"
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
         "-1.4958348",
         "53.386572"
       ]
@@ -140,6 +153,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5227191",
+        "53.368957"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -151,6 +177,19 @@ lines =
         "53.35095161540766"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5033066",
+        "53.368536"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -179,6 +218,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4207239",
+        "53.342978"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -192,6 +244,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3746328",
+        "53.344687"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -203,6 +268,19 @@ lines =
         "53.36293676590975"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3732",
+        "53.342009"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -244,6 +322,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3684151",
+        "53.360897"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -255,6 +346,19 @@ lines =
         "53.32918429507932"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3615321",
+        "53.363979"
+      ]
+    }
   },
   {
     "type": "LineString",
@@ -270,6 +374,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3914232",
+        "53.372297"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -283,6 +400,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3915771",
+        "53.364657"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -294,6 +424,19 @@ lines =
         "53.39696540915059"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3812491",
+        "53.373242"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -368,6 +511,19 @@ lines =
     "geometry": {
       "type": "Point",
       "coordinates": [
+        "-1.4573487",
+        "53.37088"
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
         "-1.3460867",
         "53.347113"
       ]
@@ -385,6 +541,19 @@ lines =
         "53.346114936803396"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3618015",
+        "53.325814"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -472,6 +641,19 @@ lines =
     "geometry": {
       "type": "Point",
       "coordinates": [
+        "-1.5726519",
+        "53.471913"
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
         "-1.4529254",
         "53.402913"
       ]
@@ -504,6 +686,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4617729",
+        "53.401453"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -515,6 +710,19 @@ lines =
         "53.36728008083111"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4502263",
+        "53.399935"
+      ]
+    }
   },
   {
     "type": "LineString",
@@ -530,6 +738,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4444542",
+        "53.406623"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -541,6 +762,19 @@ lines =
         "53.37534805400177"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4492747",
+        "53.420065"
+      ]
+    }
   },
   {
     "type": "LineString",
@@ -556,6 +790,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.459794",
+        "53.404509"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -569,6 +816,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4665685",
+        "53.417276"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -580,6 +840,19 @@ lines =
         "53.36293676590975"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4649906",
+        "53.435111"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -608,6 +881,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5230457",
+        "53.417776"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -621,6 +907,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4987618",
+        "53.393389"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -632,6 +931,19 @@ lines =
         "53.35760011393069"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4911062",
+        "53.390992"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -680,6 +992,19 @@ lines =
     "geometry": {
       "type": "Point",
       "coordinates": [
+        "-1.5022038",
+        "53.392235"
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
         "-1.5130301",
         "53.416"
       ]
@@ -699,6 +1024,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5068105",
+        "53.40349"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -710,6 +1048,19 @@ lines =
         "53.4021413099425"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5096379",
+        "53.404832"
+      ]
+    }
   },
   {
     "type": "LineString",
@@ -725,6 +1076,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5340737",
+        "53.404075"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -736,6 +1100,19 @@ lines =
         "53.41182228302446"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5357674",
+        "53.40739"
+      ]
+    }
   },
   {
     "type": "LineString",
@@ -751,6 +1128,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4865432",
+        "53.360303"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -762,6 +1152,19 @@ lines =
         "53.32798675028757"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.5084989",
+        "53.345681"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -788,6 +1191,19 @@ lines =
         "53.377025653130836"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.483709",
+        "53.341172"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -842,6 +1258,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4641127",
+        "53.357643"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -853,6 +1282,19 @@ lines =
         "53.34071461020028"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4310343",
+        "53.411296"
+      ]
+    }
   },
   {
     "type": "LineString",
@@ -868,6 +1310,19 @@ lines =
     ]
   },
   {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.4310343",
+        "53.411296"
+      ]
+    }
+  },
+  {
     "type": "LineString",
     "coordinates": [
       [
@@ -879,6 +1334,19 @@ lines =
         "53.35095161540766"
       ]
     ]
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        "-1.3980249",
+        "53.413634"
+      ]
+    }
   },
   {
     "type": "Feature",
@@ -1232,6 +1700,18 @@ lines =
 
 
 L.geoJSON(lines, {
+  pointToLayer: function(feature, latlng) {
+    if(feature.properties && feature.properties.type == "home") {
+      return L.circleMarker(latlng, {
+        radius: 10,
+        stroke: 0,
+        fillColor: "#403",
+        fillOpacity: 0.7
+      })
+    } else {
+      return L.marker(latlng)
+    }
+  },
   onEachFeature: function(feature, layer) {
     if(feature.properties && feature.properties.name) {
       layer.bindPopup(feature.properties.name)
