Add title for Where Councillors Are

--- a/where/index.html
+++ b/where/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<title>Sheffield: Where Councillors Are</title>
 <!-- per http://leafletjs.com/examples/quick-start/ -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
    integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
@@ -9,6 +10,7 @@
    crossorigin=""></script>
 </head>
 <body style="margin: 0">
+  <h1 style="margin-left:40px">Where Councillors Are</h1>
 <div class="sheffmap" style="height:100vh"
   data-url="turnout.csv"
   data-column="turnout"
