Fix z-level of title

--- a/where/index.html
+++ b/where/index.html
@@ -10,7 +10,9 @@
    crossorigin=""></script>
 </head>
 <body style="margin: 0">
+<div style="position:absolute; z-index:999">
   <h1 style="margin-left:40px">Where Councillors Are</h1>
+</div>
 <div class="sheffmap" style="height:100vh"
   data-url="turnout.csv"
   data-column="turnout"
