Updating location data

--- a/where/index.html
+++ b/where/index.html
@@ -1097,6 +1097,21 @@ geofeatures =
     "properties": {
       "type": "home",
       "colour": "#d00",
+      "representing": "Nether Edge & Sharrow"
+    },
+    "geometry": {
+      "type": "Point",
+      "coordinates": [
+        -1.477906,
+        53.366226
+      ]
+    }
+  },
+  {
+    "type": "Feature",
+    "properties": {
+      "type": "home",
+      "colour": "#d00",
       "representing": "Gleadless Valley",
       "distance": 2.3
     },
