Fix sheffmap link

--- a/imd/index.html
+++ b/imd/index.html
@@ -20,7 +20,7 @@
   data-style="styleDecile"
   data-wards="yes"
   ></div>
-<script src="sheffmap.js"></script>
+<script src="https://drj11.github.io/sheffmap/sheffmap.js"></script>
 <script>
 
 labelDecile = function(v, d, feature) {
